# rag-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md
rag_system/: pipeline.py  run_pipeline.py
rag_system/api/: main.py
rag_system/conversation/: context_compressor.py  query_rewriter.py  session_manager.py
rag_system/data_collection/: arxiv_scraper.py  citation_parser.py  pdf_extractor.py
rag_system/evaluation/: evaluator.py  metrics.py
rag_system/generation/: llm_client.py  prompt_templates.py
rag_system/indexing/: chunker.py  embedder.py  graph_builder.py
rag_system/reranking/: cross_encoder_reranker.py
rag_system/retrieval/: dense_retriever.py  graph_retriever.py  hybrid_retriever.py  sparse_retriever.py
rag_system/ui/: app.py
scripts/: deploy-oracle.sh
